--- a/src/app/pages/dashboard/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.scss
@@ -64,3 +64,9 @@
     font-weight: 600;
     color: #222;
 }
+
+.chart-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
