--- a/src/assets/scss/overrides/_materialoverrides.scss
+++ b/src/assets/scss/overrides/_materialoverrides.scss
@@ -1,11 +1,4 @@
-
-.light-theme .blue_theme,
-.light-theme .purple_theme,
-.light-theme .orange_theme,
-.light-theme .green_theme,
-.light-theme .aqua_theme,
-.light-theme .cyan_theme,
-.dark-theme {
+.light-theme .blue_theme {
   @import "./buttons";
   @import "./drawer";
   @import "./form";
@@ -17,13 +10,10 @@
   }
 }
 
-.light-theme,
-.dark-theme {
+.light-theme {
   @import "./card";
   @import "./typography";
 }
 
 @import "./borderColor";
 @import "./table";
-
-@import "./list";
