fixed-dual-route

--- a/src/app/layouts/combined/combined.component.html
+++ b/src/app/layouts/combined/combined.component.html
@@ -1,4 +1,6 @@
 <ng-container *ngIf="showTopNavigation">
   <app-top-navigation></app-top-navigation>
 </ng-container>
-<router-outlet></router-outlet>
+<main class="pageWrapper">
+  <router-outlet></router-outlet>
+</main>
