--- a/src/app/layouts/top-navigation/top-navigation.component.html
+++ b/src/app/layouts/top-navigation/top-navigation.component.html
@@ -74,6 +74,6 @@
   </mat-menu>
 </mat-toolbar>
 
-<main class="pageWrapper">
+<!-- <main class="pageWrapper">
   <router-outlet></router-outlet>
-</main>
+</main> -->
