--- a/src/app/layouts/combined/combined.component.html
+++ b/src/app/layouts/combined/combined.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="showTopNavigation">
-  <app-top-navigation></app-top-navigation>
+  <app-navigation></app-navigation>
 </ng-container>
 <main class="pageWrapper">
   <router-outlet></router-outlet>
