--- a/src/app/pages/trading/order-book/order-book.component.html
+++ b/src/app/pages/trading/order-book/order-book.component.html
@@ -1,7 +1,5 @@
-
-<div class="table-wrapper table-responsive m-t-30">
-    <table mat-table [dataSource]="dataSource" matSort class="w-100">
-
+<div class="table-wrapper responsive-table m-t-30">
+    <table mat-table [dataSource]="dataSource" multiTemplateDataRows>
         <!-- Symbol Column -->
         <ng-container matColumnDef="symbol">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Symbol </th>
@@ -11,61 +9,62 @@
         <!-- Type Column -->
         <ng-container matColumnDef="type">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Type </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.type}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.transaction_action}} </td>
         </ng-container>
 
         <!-- Quantity/Filled Column -->
         <ng-container matColumnDef="qtyFilled">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Qty/Filled </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.qtyFilled}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.transaction_quantity}} </td>
         </ng-container>
 
         <!-- Order Price Column -->
         <ng-container matColumnDef="orderPrice">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Order Price </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.orderPrice}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.transaction_price}} </td>
         </ng-container>
 
         <!-- Executed At Column -->
         <ng-container matColumnDef="executedAt">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Executed At </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.executedAt}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.buy_response_update_time |date}} </td>
         </ng-container>
 
         <!-- Average Price Column -->
         <ng-container matColumnDef="avgPrice">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Avg Price </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.avgPrice}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.transaction_price}} </td>
         </ng-container>
 
         <!-- LTP Column -->
         <ng-container matColumnDef="ltp">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> LTP </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.ltp}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.last_traded_price}} </td>
         </ng-container>
 
         <!-- Status Column -->
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Status </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.status}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.progress_status}} </td>
         </ng-container>
 
         <!-- Date Column -->
         <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Date </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.date}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.transaction_date|date}} </td>
         </ng-container>
 
         <!-- Validity Column -->
         <ng-container matColumnDef="validity">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Validity </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.validity}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.validity?element.validity:'Carry Fwd'}}
+            </td>
         </ng-container>
 
         <!-- Product Column -->
         <ng-container matColumnDef="product">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Product </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.product}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.product?element.product:'F&O'}} </td>
         </ng-container>
 
         <!-- Order Type Column -->
@@ -77,32 +76,107 @@
         <!-- XTS Order ID Column -->
         <ng-container matColumnDef="xtsOrderId">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> XTS Order ID </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.xtsOrderId}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.order_id}} </td>
         </ng-container>
 
         <!-- Exchange Order No Column -->
         <ng-container matColumnDef="exchangeOrderNo">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Exchange Order No </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.exchangeOrderNo}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1">
+                {{element.exchangeOrderNo?element.exchangeOrderNo:'12358'}} </td>
         </ng-container>
 
         <!-- Action Column -->
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Action </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.action}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"><button mat-raised-button color="warn"
+                    (click)="buySell()" class="m-b-10">
+                    Buy
+                </button> </td>
         </ng-container>
 
-        <!-- Header and Row Definitions -->
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+        <ng-container matColumnDef="expandedDetail">
+            <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+                <div class="example-element-detail" *ngIf="element?.details?.data?.length"
+                    [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                    <div class="inner-table mat-elevation-z8" *ngIf="expandedElement">
+                        <table #innerTables mat-table [dataSource]="element?.details">
+                            <!-- <ng-container matColumnDef="{{innerColumn}}"
+                                *ngFor="let innerColumn of innerDisplayedColumns">
+                                <th mat-header-cell *matHeaderCellDef> {{innerColumn}} </th>
+                                <td mat-cell *matCellDef="let element"> {{element[innerColumn]}} </td>
+                            </ng-container> -->
+                            <ng-container matColumnDef="master_position_id">
+                                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Master
+                                    Position Id </th>
+                                <td mat-cell *matCellDef="let element" class="mat-body-1">
+                                    {{element.master_position_id}} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="sector_name">
+                                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> sector_name
+                                </th>
+                                <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.sector_name}} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="square_off_quantity">
+                                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square Off
+                                    Quantity </th>
+                                <td mat-cell *matCellDef="let element" class="mat-body-1">
+                                    {{element.square_off_quantity}} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="square_off_position">
+                                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square Off
+                                    Position </th>
+                                <td mat-cell *matCellDef="let element" class="mat-body-1">
+                                    {{element.square_off_position}} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="sell_response_update_time">
+                                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Sell
+                                    Response Update Time </th>
+                                <td mat-cell *matCellDef="let element" class="mat-body-1">
+                                    {{element.sell_response_update_time}} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="progress_status">
+                                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Progress
+                                    Status </th>
+                                <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.progress_status}}
+                                </td>
+                            </ng-container>
+                            <ng-container matColumnDef="square_off_time">
+                                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square Off
+                                    Time </th>
+                                <td mat-cell *matCellDef="let element" class="mat-body-1">
+                                    {{element.square_off_time|date}} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="square_off_order_id">
+                                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square Off
+                                    Order Id </th>
+                                <td mat-cell *matCellDef="let element" class="mat-body-1">
+                                    {{element.square_off_order_id}} </td>
+                            </ng-container>
+                            <tr mat-header-row *matHeaderRowDef="innerDisplayedColumns"></tr>
+                            <tr mat-row *matRowDef="let row; columns: innerDisplayedColumns;"></tr>
+                        </table>
+                    </div>
+                </div>
+            </td>
+        </ng-container>
 
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let element; columns: displayedColumns"
+            [class.example-element-row]="element.details?.data?.length"
+            [class.example-expanded-row]="expandedElement === element" (click)="toggleRow(element)">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
     </table>
 </div>
 
 <!-- Pagination Below the Table -->
 <div class="pagination-wrapper">
+    <!-- <mat-paginator [length]="totalCount" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
+        (page)="onPageChange($event)">
+    </mat-paginator> -->
     <mat-paginator [length]="totalCount" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
         (page)="onPageChange($event)">
     </mat-paginator>
 </div>
-
