--- a/src/app/pages/trading/order-book/order-book.component.html
+++ b/src/app/pages/trading/order-book/order-book.component.html
@@ -1,15 +1,22 @@
 <div class="table-wrapper responsive-table m-t-30">
+    <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
     <table mat-table [dataSource]="dataSource" multiTemplateDataRows>
         <!-- Symbol Column -->
         <ng-container matColumnDef="symbol">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Symbol </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.symbol}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1">
+            <ng-container *ngIf="element.details?.data?.length > 0">
+                <mat-icon>arrow_right</mat-icon>
+            </ng-container>
+            {{element.symbol}}
+            </td>
         </ng-container>
 
         <!-- Type Column -->
         <ng-container matColumnDef="type">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Type </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.transaction_action}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.transaction_action==1?'Buy':'Sell'}}
+            </td>
         </ng-container>
 
         <!-- Quantity/Filled Column -->
@@ -27,7 +34,8 @@
         <!-- Executed At Column -->
         <ng-container matColumnDef="executedAt">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Executed At </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.buy_response_update_time |date}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{
+                this.utilityService.convertDateTime(element.buy_response_update_time)}} </td>
         </ng-container>
 
         <!-- Average Price Column -->
@@ -44,14 +52,43 @@
 
         <!-- Status Column -->
         <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Status </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.progress_status}} </td>
+            <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1">Order Status </th>
+            <!-- <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.progress_status}} </td> -->
+            <td mat-cell *matCellDef="let element">
+                <ng-template [ngIf]="element.progress_status == ''">
+                    <span class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12">
+                        {{ element.progress_status | titlecase }}
+                    </span>
+                </ng-template>
+                <ng-template
+                    [ngIf]="(element.progress_status == 'Manual Order Placed') || (element.progress_status == 'Order Placed')">
+                    <span class="bg-light-primary text-primary rounded f-w-600 p-6 p-y-4 f-s-12">
+                        {{ element.progress_status | titlecase }}
+                    </span>
+                </ng-template>
+                <ng-template [ngIf]="element.progress_status == 'Manual Square Off'">
+                    <span class="bg-light-warning text-warning rounded f-w-600 p-6 p-y-4 f-s-12">
+                        {{ element.progress_status | titlecase }}
+                    </span>
+                </ng-template>
+                <ng-template
+                    [ngIf]="(element.progress_status == 'Order Rejected') || (element.progress_status == 'Loss Booked')">
+                    <span class="bg-light-error text-error rounded f-w-600 p-6 p-y-4 f-s-12">
+                        {{ element.progress_status | titlecase }}
+                    </span>
+                </ng-template>
+                <ng-template [ngIf]="element.progress_status == 'Profit Booked'">
+                    <span class="bg-light-success text-success rounded f-w-600 p-6 p-y-4 f-s-12">
+                        {{ element.progress_status | titlecase }}
+                    </span>
+                </ng-template>
+            </td>
         </ng-container>
 
         <!-- Date Column -->
         <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Date </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.transaction_date|date}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{ this.utilityService.convertDateTime(element.transaction_date)}} </td>
         </ng-container>
 
         <!-- Validity Column -->
@@ -70,12 +107,13 @@
         <!-- Order Type Column -->
         <ng-container matColumnDef="orderType">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Order Type </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.orderType}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.orderType?element.orderType:'Normal'}}
+            </td>
         </ng-container>
 
-        <!-- XTS Order ID Column -->
+        <!-- Order ID Column -->
         <ng-container matColumnDef="xtsOrderId">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> XTS Order ID </th>
+            <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Order ID </th>
             <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.order_id}} </td>
         </ng-container>
 
@@ -86,13 +124,16 @@
                 {{element.exchangeOrderNo?element.exchangeOrderNo:'12358'}} </td>
         </ng-container>
 
-        <!-- Action Column -->
+        <!-- Manual Square Off -->
         <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Action </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"><button mat-raised-button color="warn"
-                    (click)="buySell()" class="m-b-10">
-                    Buy
-                </button> </td>
+            <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Manual Square Off </th>
+            <td mat-cell *matCellDef="let element" class="mat-body-1">
+                <button mat-raised-button color="warn"
+                    [disabled]="(element.progress_status == 'Manual Square Off'||element.progress_status == 'Order Placed')"
+                    (click)="buySell(); $event.stopPropagation()" class="m-b-10">
+                    Square Off
+                </button>
+            </td>
         </ng-container>
 
         <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
@@ -100,21 +141,21 @@
             <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
                 <div class="example-element-detail" *ngIf="element?.details?.data?.length"
                     [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                    <div class="inner-table mat-elevation-z8" *ngIf="expandedElement">
+                    <div class="inner-table mat-elevation-z8 p-l-15" *ngIf="expandedElement">
                         <table #innerTables mat-table [dataSource]="element?.details">
                             <!-- <ng-container matColumnDef="{{innerColumn}}"
                                 *ngFor="let innerColumn of innerDisplayedColumns">
                                 <th mat-header-cell *matHeaderCellDef> {{innerColumn}} </th>
                                 <td mat-cell *matCellDef="let element"> {{element[innerColumn]}} </td>
                             </ng-container> -->
-                            <ng-container matColumnDef="master_position_id">
+                            <!-- <ng-container matColumnDef="master_position_id">
                                 <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Master
                                     Position Id </th>
                                 <td mat-cell *matCellDef="let element" class="mat-body-1">
                                     {{element.master_position_id}} </td>
-                            </ng-container>
+                            </ng-container> -->
                             <ng-container matColumnDef="sector_name">
-                                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> sector_name
+                                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Symbol
                                 </th>
                                 <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.sector_name}} </td>
                             </ng-container>
@@ -128,16 +169,17 @@
                                 <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square Off
                                     Position </th>
                                 <td mat-cell *matCellDef="let element" class="mat-body-1">
-                                    {{element.square_off_position}} </td>
+                                    {{ this.utilityService.convertDateTime(element.square_off_position)}}
+                                </td>
                             </ng-container>
                             <ng-container matColumnDef="sell_response_update_time">
-                                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Sell
-                                    Response Update Time </th>
+                                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Executed At
+                                </th>
                                 <td mat-cell *matCellDef="let element" class="mat-body-1">
                                     {{element.sell_response_update_time}} </td>
                             </ng-container>
                             <ng-container matColumnDef="progress_status">
-                                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Progress
+                                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Order
                                     Status </th>
                                 <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.progress_status}}
                                 </td>
@@ -146,7 +188,7 @@
                                 <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square Off
                                     Time </th>
                                 <td mat-cell *matCellDef="let element" class="mat-body-1">
-                                    {{element.square_off_time|date}} </td>
+                                    {{ this.utilityService.convertDateTime(element.square_off_time)}} </td>
                             </ng-container>
                             <ng-container matColumnDef="square_off_order_id">
                                 <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square Off
@@ -169,13 +211,14 @@
         </tr>
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
     </table>
+    <!-- No Data Found Message -->
+    <div *ngIf="dataSource?.data?.length === 0" class="no-data-message">
+        <p>No data found.</p>
+    </div>
 </div>
 
 <!-- Pagination Below the Table -->
 <div class="pagination-wrapper">
-    <!-- <mat-paginator [length]="totalCount" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
-        (page)="onPageChange($event)">
-    </mat-paginator> -->
     <mat-paginator [length]="totalCount" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
         (page)="onPageChange($event)">
     </mat-paginator>
