--- a/src/app/pages/trading/trade-tabs/trade-tabs.component.html
+++ b/src/app/pages/trading/trade-tabs/trade-tabs.component.html
@@ -35,22 +35,23 @@
                 <mat-panel-title class="mat-subtitle-2 f-s-14 f-w-600"> Search & Filters </mat-panel-title>
             </mat-expansion-panel-header>
             <form [formGroup]="searchForm" (ngSubmit)="onSubmit()">
-                <h3>Search Filters</h3>
+
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-6">
+                        <h3>Search Filters</h3>
+                        <!-- <div class="col-md-6"> -->
                         <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Symbol</mat-label>
                         <mat-form-field appearance="outline" color="primary" class="w-100">
                             <input matInput formControlName="F_column1" type="text">
                         </mat-form-field>
-                    </div>
-                    <div class="col-md-4">
+                        <!-- </div>
+                        <div class="col-md-6"> -->
                         <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Status</mat-label>
                         <mat-form-field appearance="outline" color="primary" class="w-100">
                             <input matInput formControlName="F_column2" type="text">
                         </mat-form-field>
-                    </div>
- 
-                    <div class="col-md-4">
+                        <!-- </div> -->
+                        <!-- <div class="col-md-4">
                         <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Column 3</mat-label>
                         <mat-form-field appearance="outline" color="primary" class="w-100">
                             <input matInput formControlName="F_column3" type="text">
@@ -74,28 +75,35 @@
                         <mat-form-field appearance="outline" color="primary" class="w-100">
                             <input matInput formControlName="F_column6" type="text">
                         </mat-form-field>
+                    </div> -->
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Column Filters</h3>
+                        <div class="col-md-12">
+
+                        <mat-radio-group formControlName="sortingOrder" aria-label="Select an option">
+                            <mat-radio-button value="asc">Ascending</mat-radio-button>
+                            <mat-radio-button value="desc">Descending</mat-radio-button>
+                        </mat-radio-group>
+                    </div>
+                        <div class="col-md-12">
+                            <mat-form-field appearance="outline" class="p-10">
+                                <mat-label>Column Order</mat-label>
+                                <mat-select name="orderColumn" formControlName="sortingColumn">
+                                    @for (col of orderDropdown; track col) {
+                                    <mat-option [value]="col">{{col|titlecase}}</mat-option>
+                                    }
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+
                     </div>
                 </div>
-                <h3>Column Filters</h3>
-              
-                <mat-radio-group formControlName="sortingOrder" aria-label="Select an option">
-                    <mat-radio-button value="asc">Ascending</mat-radio-button>
-                    <mat-radio-button value="desc">Descending</mat-radio-button>
-                </mat-radio-group>
 
-                <mat-form-field appearance="outline" class="p-10">
-                    <mat-label>Column Order</mat-label>
-                    <mat-select name="orderColumn" formControlName="sortingColumn">
-                        @for (col of orderDropdown; track col) {
-                        <mat-option [value]="col">{{col|titlecase}}</mat-option>
-                        }
-                    </mat-select>
-                </mat-form-field>
                 <!-- </mat-card-content> -->
                 <div class="text-right p-24 p-t-0">
-                    <button mat-flat-button color="primary" class="m-r-8" type="submit">Save</button>
-                    <button mat-flat-button color="primary" class="m-r-8" type="submit">Reset</button>
-                    <button mat-stroked-button color="warn" class="m-r-8" type="button">Cancel</button>
+                    <button mat-flat-button color="primary" class="m-r-8" type="submit">Search</button>
+                    <button mat-flat-button color="warn" class="m-r-8" type="button" (click)="onReset()">Reset</button>
                 </div>
                 <!-- </mat-card> -->
             </form>
@@ -103,20 +111,20 @@
     </mat-accordion>
 </div>
 <div class="p-t-15">
-<mat-card class="mat-mdc-card mdc-card chat-app cardWithShadow p-14 w-100 h-100">
-    <mat-tab-group animationDuration="0ms" class="mat-mdc-tab-group mat-primary" selectedIndex="0">
-        <mat-tab label="Order Book">
-            <app-order-book [searchData]="this.searchData"></app-order-book>
-        </mat-tab>
-        <mat-tab label="Trade Book">
-            <app-trade-book [searchData]="this.searchData"></app-trade-book>
-        </mat-tab>
-        <mat-tab label="Position">
-            <app-position [searchData]="this.searchData"></app-position>
-        </mat-tab>
-        <mat-tab label="Holdings">
-            <app-holding [searchData]="this.searchData"></app-holding>
-        </mat-tab>
-    </mat-tab-group>
-</mat-card>
+    <mat-card class="mat-mdc-card mdc-card chat-app cardWithShadow p-14 w-100 h-100">
+        <mat-tab-group animationDuration="0ms" class="mat-mdc-tab-group mat-primary" [selectedIndex]="activeTabIndex">
+            <mat-tab label="Order Book">
+                <app-order-book [searchData]="this.searchData"></app-order-book>
+            </mat-tab>
+            <mat-tab label="Trade Book">
+                <app-trade-book [searchData]="this.searchData"></app-trade-book>
+            </mat-tab>
+            <mat-tab label="Position">
+                <app-position [searchData]="this.searchData"></app-position>
+            </mat-tab>
+            <mat-tab label="Holdings">
+                <app-holding [searchData]="this.searchData"></app-holding>
+            </mat-tab>
+        </mat-tab-group>
+    </mat-card>
 </div>
