--- a/src/app/pages/account/subscription/subscription.component.html
+++ b/src/app/pages/account/subscription/subscription.component.html
@@ -114,7 +114,7 @@
                         <div>
                             <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Api Key</mat-label>
                             <mat-form-field appearance="outline" color="primary" class="w-100">
-                                <input matInput formControlName="maxOrders" type="text">
+                                <input matInput formControlName="apiKey" type="text">
                             </mat-form-field>
                         </div>
                         <div>
