--- a/src/app/pages/trading/order-book/order-book.component.html
+++ b/src/app/pages/trading/order-book/order-book.component.html
@@ -57,8 +57,27 @@
         <!-- LTP Column -->
         <ng-container matColumnDef="ltp">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> LTP </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.last_traded_price}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12" [ngClass]="this.utilityService.getLtpClass(element.last_traded_price, element.transaction_price)">
+                {{element.last_traded_price}}
+            </td>
         </ng-container>
+
+       <!-- Unrealised Column -->
+       <ng-container matColumnDef="unrealized">
+        <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Unrealised PnL </th>
+        <td mat-cell *matCellDef="let element" class="mat-body-1" [ngClass]="this.utilityService.getUnrealizedRealizedClass(element.unrealized)">
+            {{element.unrealized}}
+        </td>
+    </ng-container>
+
+    <!-- Realized Column -->
+        <ng-container matColumnDef="realized">
+            <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Realized  PnL</th>
+            <td mat-cell *matCellDef="let element" class="mat-body-1" [ngClass]="this.utilityService.getUnrealizedRealizedClass(element.realized)">
+                {{element.realized}}
+            </td>
+        </ng-container>
+
 
         <!-- Status Column -->
         <ng-container matColumnDef="status">
@@ -81,20 +100,20 @@
         <!-- Validity Column -->
         <ng-container matColumnDef="validity">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Validity </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.validity?element.validity:'Carry Fwd'}}
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.validity}}
             </td>
         </ng-container>
 
         <!-- Product Column -->
         <ng-container matColumnDef="product">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Product </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.product?element.product:'F&O'}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.product}} </td>
         </ng-container>
 
         <!-- Order Type Column -->
         <ng-container matColumnDef="orderType">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Order Type </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.orderType?element.orderType:'Normal'}}
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.orderType}}
             </td>
         </ng-container>
 
@@ -156,14 +175,14 @@
                                 <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square Off
                                     Position </th>
                                 <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12">
-                                    {{ this.utilityService.convertDateTime(element.square_off_position)}}
+                                    {{element.square_off_position}}
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="sell_response_update_time">
                                 <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Executed At
                                 </th>
                                 <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12">
-                                    {{element.sell_response_update_time}} </td>
+                                    {{ this.utilityService.convertDateTime(element.sell_response_update_time)}} </td>
                             </ng-container>
                             <ng-container matColumnDef="progress_status">
                                 <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Order
