--- a/src/app/pages/trading/order-book/order-book.component.html
+++ b/src/app/pages/trading/order-book/order-book.component.html
@@ -65,7 +65,7 @@
        <!-- Unrealised Column -->
        <ng-container matColumnDef="unrealized">
         <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Unrealised PnL </th>
-        <td mat-cell *matCellDef="let element" class="mat-body-1" [ngClass]="this.utilityService.getUnrealizedRealizedClass(element.unrealized)">
+        <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12" [ngClass]="this.utilityService.getUnrealizedRealizedClass(element.unrealized)">
             {{element.unrealized}}
         </td>
     </ng-container>
@@ -73,7 +73,7 @@
     <!-- Realized Column -->
         <ng-container matColumnDef="realized">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Realized  PnL</th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1" [ngClass]="this.utilityService.getUnrealizedRealizedClass(element.realized)">
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12" [ngClass]="this.utilityService.getUnrealizedRealizedClass(element.realized)">
                 {{element.realized}}
             </td>
         </ng-container>
